Ensure previews don't wrap text (#39)

--- a/frontend/app/block/block.less
+++ b/frontend/app/block/block.less
@@ -31,10 +31,13 @@
     justify-content: center;
     background-color: var(--panel-bg-color);
     user-select: none;
+    cursor: default;
 
     .block-header-text {
         padding: 0 5px;
         flex-grow: 1;
+        user-select: none;
+        cursor: default;
     }
 
     .close-button {
